# InputQuest

./: .gitignore  README.md  pyproject.toml
app/: forms.py  models.py  tasks.py  urls.py  utils.py  views.py
app/management/commands/: resetdb.py  tabimport.py  ytimport.py
app/nn_srs/: review_lstm.pth  test.py  train.py
app/nn_srs/data/: test.py  train.py
app/nn_srs/models/: lstm_srs.pth  lstm_srs.py  review_lstm.py
app/templates/: account.html  all_videos.html  channel.html  flashcards.html  learn.html  learn_word.html  review.html  sidebar.html  watch.html  watch_history.html  watch_queue.html
app/templates/registration/: signup.html
backend/: pyproject.toml
backend/api/: models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/api/management/commands/: add_genres.py  countinstances.py  de_debug.py  de_import.py  definition.py  pl_ipa.py  tabimport.py  ytimport.py
backend/api/migrations/: 0001_initial.py  0002_alter_word_root.py  0003_word_instance_count.py  0004_alter_userword_unique_together.py  0005_alter_userword_unique_together_and_more.py  0006_wordset_wordsetvideoscore.py  0007_userpreferences_word_set.py
backend/config/: settings.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: BoundedNumberRangeInput.tsx  Checkbox.tsx  ConjugationTable.tsx  FlashcardConjugations.tsx  FlashcardList.tsx  InfoTooltip.tsx  LanguageSelection.tsx  LoadingSpinner.tsx  PronunciationGuide.tsx  ScoreBox.tsx  SetupGuard.tsx  (+5 more)
inputquest/: settings.py  urls.py
(+50 files in other folders)
